tests/fixtures/invalid/divmod_bool_dict.py
# Cannot call divmod() with Bool, Dict[str, int]
x = divmod(True, {"a": 1})
